// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin should create domain 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 15
  },
  name: \\"domain\\",
  sid: \\"domain /src/babel/__tests__/fixtures/create-domain.js [4, 15]\\"
});
const foo = createDomain('bar', {
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 12
  },
  name: \\"foo\\",
  sid: \\"foo /src/babel/__tests__/fixtures/create-domain.js [5, 12]\\"
});"
`;

exports[`babel-plugin should create domain domain 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 15
  },
  name: \\"domain\\",
  sid: \\"domain /src/babel/__tests__/fixtures/create-domain-domain.js [4, 15]\\"
});
const foo = domain.domain(\\"foo\\", {
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 12
  },
  name: \\"foo\\",
  sid: \\"foo /src/babel/__tests__/fixtures/create-domain-domain.js [5, 12]\\"
});
const bar = domain.domain('baz', {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 12
  },
  name: \\"bar\\",
  sid: \\"bar /src/babel/__tests__/fixtures/create-domain-domain.js [6, 12]\\"
});"
`;

exports[`babel-plugin should create domain effect 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 15
  },
  name: \\"domain\\",
  sid: \\"domain /src/babel/__tests__/fixtures/create-domain-effect.js [4, 15]\\"
});
const a = domain.effect(\\"a\\", {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 10
  },
  name: \\"a\\",
  sid: \\"a /src/babel/__tests__/fixtures/create-domain-effect.js [6, 10]\\"
});

const f = () => domain.effect(\\"f\\", {
  loc: {
    file: _effectorFileName,
    line: 7,
    column: 16
  },
  name: \\"f\\",
  sid: \\"f /src/babel/__tests__/fixtures/create-domain-effect.js [7, 16]\\"
});

const b = domain.effect('hello', {
  loc: {
    file: _effectorFileName,
    line: 8,
    column: 10
  },
  name: \\"b\\",
  sid: \\"b /src/babel/__tests__/fixtures/create-domain-effect.js [8, 10]\\"
});

const g = () => domain.effect('baz', {
  loc: {
    file: _effectorFileName,
    line: 9,
    column: 16
  },
  name: \\"g\\",
  sid: \\"g /src/babel/__tests__/fixtures/create-domain-effect.js [9, 16]\\"
});"
`;

exports[`babel-plugin should create domain event 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 15
  },
  name: \\"domain\\",
  sid: \\"domain /src/babel/__tests__/fixtures/create-domain-event.js [4, 15]\\"
});
const a = domain.event(\\"a\\", {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 10
  },
  name: \\"a\\",
  sid: \\"a /src/babel/__tests__/fixtures/create-domain-event.js [6, 10]\\"
});

const f = () => domain.event(\\"f\\", {
  loc: {
    file: _effectorFileName,
    line: 7,
    column: 16
  },
  name: \\"f\\",
  sid: \\"f /src/babel/__tests__/fixtures/create-domain-event.js [7, 16]\\"
});

const b = domain.event('asm', {
  loc: {
    file: _effectorFileName,
    line: 8,
    column: 10
  },
  name: \\"b\\",
  sid: \\"b /src/babel/__tests__/fixtures/create-domain-event.js [8, 10]\\"
});

const g = () => domain.event('tasm', {
  loc: {
    file: _effectorFileName,
    line: 9,
    column: 16
  },
  name: \\"g\\",
  sid: \\"g /src/babel/__tests__/fixtures/create-domain-event.js [9, 16]\\"
});"
`;

exports[`babel-plugin should create domain store 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 15
  },
  name: \\"domain\\",
  sid: \\"domain /src/babel/__tests__/fixtures/create-domain-store.js [4, 15]\\"
});
const a = domain.store('bar', {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 10
  },
  name: \\"a\\",
  sid: \\"a /src/babel/__tests__/fixtures/create-domain-store.js [6, 10]\\"
});
const b = domain.store('h', {
  ɔ: {
    option: 'test',
    ['na' + 'me']: 'LOL'
  },
  loc: {
    file: _effectorFileName,
    line: 7,
    column: 10
  },
  name: \\"b\\",
  sid: \\"b /src/babel/__tests__/fixtures/create-domain-store.js [7, 10]\\"
});
const c = domain.store('h', {
  ɔ: {
    name: 'test'
  },
  loc: {
    file: _effectorFileName,
    line: 8,
    column: 10
  },
  name: \\"c\\",
  sid: \\"c /src/babel/__tests__/fixtures/create-domain-store.js [8, 10]\\"
}); //$off

const d = domain.store('h', {
  ɔ: null,
  loc: {
    file: _effectorFileName,
    line: 10,
    column: 10
  },
  name: \\"d\\",
  sid: \\"d /src/babel/__tests__/fixtures/create-domain-store.js [10, 10]\\"
}); //$off

const e = domain.store('h', {
  ɔ: 4234,
  loc: {
    file: _effectorFileName,
    line: 12,
    column: 10
  },
  name: \\"e\\",
  sid: \\"e /src/babel/__tests__/fixtures/create-domain-store.js [12, 10]\\"
});
const f = domain.store('h', {
  ɔ: {},
  loc: {
    file: _effectorFileName,
    line: 13,
    column: 10
  },
  name: \\"f\\",
  sid: \\"f /src/babel/__tests__/fixtures/create-domain-store.js [13, 10]\\"
});"
`;

exports[`babel-plugin should create effect 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createEffect } from 'effector';
const foo = createEffect(\\"foo\\", {
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 12
  },
  name: \\"foo\\",
  sid: \\"foo /src/babel/__tests__/fixtures/create-effect.js [5, 12]\\"
});
const bar = createEffect('hello', {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 12
  },
  name: \\"bar\\",
  sid: \\"bar /src/babel/__tests__/fixtures/create-effect.js [6, 12]\\"
});
const baz = createEffect({
  handler() {
    return 0;
  }

}, {
  loc: {
    file: _effectorFileName,
    line: 7,
    column: 12
  },
  name: \\"baz\\",
  sid: \\"baz /src/babel/__tests__/fixtures/create-effect.js [7, 12]\\"
});
const quux = createEffect('nice', {
  ɔ: {
    handler() {
      return 0;
    }

  },
  loc: {
    file: _effectorFileName,
    line: 12,
    column: 13
  },
  name: \\"quux\\",
  sid: \\"quux /src/babel/__tests__/fixtures/create-effect.js [12, 13]\\"
});

const f = () => createEffect(\\"f\\", {
  loc: {
    file: _effectorFileName,
    line: 17,
    column: 16
  },
  name: \\"f\\",
  sid: \\"f /src/babel/__tests__/fixtures/create-effect.js [17, 16]\\"
});"
`;

exports[`babel-plugin should create event 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createEvent } from 'effector';
const foo = createEvent(\\"foo\\", {
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 12
  },
  name: \\"foo\\",
  sid: \\"foo /src/babel/__tests__/fixtures/create-event.js [5, 12]\\"
});
const bar = createEvent('hello', {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 12
  },
  name: \\"bar\\",
  sid: \\"bar /src/babel/__tests__/fixtures/create-event.js [6, 12]\\"
});
const baz = createEvent({
  name: 'nice'
}, {
  loc: {
    file: _effectorFileName,
    line: 7,
    column: 12
  },
  name: \\"baz\\",
  sid: \\"baz /src/babel/__tests__/fixtures/create-event.js [7, 12]\\"
});

const f = () => createEvent(\\"f\\", {
  loc: {
    file: _effectorFileName,
    line: 8,
    column: 16
  },
  name: \\"f\\",
  sid: \\"f /src/babel/__tests__/fixtures/create-event.js [8, 16]\\"
});"
`;

exports[`babel-plugin should create store 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createStore } from 'effector';
const foo = createStore('foo', {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 12
  },
  name: \\"foo\\",
  sid: \\"foo /src/babel/__tests__/fixtures/create-store.js [4, 12]\\"
});
const a = createStore('h', {
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 10
  },
  name: \\"a\\",
  sid: \\"a /src/babel/__tests__/fixtures/create-store.js [5, 10]\\"
});
const b = createStore('h', {
  ɔ: {},
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 10
  },
  name: \\"b\\",
  sid: \\"b /src/babel/__tests__/fixtures/create-store.js [6, 10]\\"
}); //$off

const c = createStore('h', {
  ɔ: 23020,
  loc: {
    file: _effectorFileName,
    line: 8,
    column: 10
  },
  name: \\"c\\",
  sid: \\"c /src/babel/__tests__/fixtures/create-store.js [8, 10]\\"
});
const config = {
  option: 0
};
const dod = createStore(null, {
  ɔ: config,
  loc: {
    file: _effectorFileName,
    line: 10,
    column: 12
  },
  name: \\"dod\\",
  sid: \\"dod /src/babel/__tests__/fixtures/create-store.js [10, 12]\\"
});

const f = a => createStore(a, {
  loc: {
    file: _effectorFileName,
    line: 12,
    column: 15
  },
  name: \\"f\\",
  sid: \\"f /src/babel/__tests__/fixtures/create-store.js [12, 15]\\"
});"
`;
